--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:aapt="http://schemas.android.com/aapt"
-	android:width="108dp"
-	android:height="108dp"
-	android:viewportWidth="108"
-	android:viewportHeight="108">
-	<path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-		<aapt:attr name="android:fillColor">
-			<gradient
-				android:endX="85.84757"
-				android:endY="92.4963"
-				android:startX="42.9492"
-				android:startY="49.59793"
-				android:type="linear">
-				<item
-					android:color="#44000000"
-					android:offset="0.0" />
-				<item
-					android:color="#00000000"
-					android:offset="1.0" />
-			</gradient>
-		</aapt:attr>
-	</path>
-	<path
-		android:fillColor="#FFFFFF"
-		android:fillType="nonZero"
-		android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-		android:strokeWidth="1"
-		android:strokeColor="#00000000" />
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="192.76"
+    android:viewportHeight="192.76">
+  <group android:scaleX="0.5"
+      android:scaleY="0.5"
+      android:translateX="48.19"
+      android:translateY="48.19">
+    <path
+        android:pathData="M0,0h192.76v192.76H0V0z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M8.5,64.15l84.77,102.08 90.98,-102.08 -32.13,-33.55 -109.89,-0.18 -33.73,33.73z"
+        android:fillColor="#cc2229"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M23.25,64.75l22.44,-23.19 14.1,0.17c-21.77,10.53 -27.05,24.82 -23.45,37.83L23.25,64.75zM72.89,124.45c17.43,4.78 28.19,5.56 43.69,0.81l-22.32,23.39 -21.37,-24.2zM43.32,90.93l18.19,20.43c2.76,-10.7 31.51,-4.16 34.03,4.6 12.05,3.96 32.58,-2.78 32.87,-9.06 -0.06,-15.15 -70.03,-2.58 -85.09,-15.97zM150.79,45.31l-0.49,21.61h-28.34c0.38,-14.29 -10.48,-21.31 -31.39,-20.73 -14.72,0.29 -28.87,6.04 -29.06,15.54 0,22.54 79.27,-1.82 85.6,29.64l22.99,-26.58 -19.31,-19.47zM117.08,41.81l15.03,0.02 -3.3,11.19c-2.77,-6.77 -7.43,-9.25 -11.74,-11.21z"
+        android:fillColor="#fff22d"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
